 * Installer doesn't need to be run as root anymore. (Dan Lucraft)

New internal APIs

 * FileParser for reading over all files in a project (Kieran Pilkington)
 * Checkbox menu items (Alex Lourie)

Fixes:

 * Fix for autocomplete, which was randomly broken due to a load order error (Anko painting)
 * Remove duplicate snippets (Dan Lucraft)

Version 0.4.1 (24 Aug 2010)
===========================

Fixes:

 * Fix Clojure REPL (Dan Lucraft)
 * Attribution for icons (Dan Lucraft)
 * Use icon we have a license for in the snippet tree (Delisa Mason)

Version 0.4 (23 Aug 2010)
=========================

Enhancements:

 * Colourful Runnables! (The output tab supports ANSI escape codes) (Mat Schaffer)
 * Runnables scroll as the output gets longer (Delisa Mason)
 * Option to save all tabs before running any Runnable (Delisa Mason)
 * Strip trailing spaces on save option (Steven Hancock)
 * Search and replace supports backreferences (\1 \2 etc) (Mat Schaffer)
 * Uses client, 32bit jvm mode, for twice as fast startup. (Dan Lucraft)
 * Bracket highlighting! (Alex Lourie)
 * Todo list (find all occurrences of TODO etc in project) (Delisa Mason)
 * Styled runnable tabs (Mat Schaffer)
 * See all snippets in a tree (Delisa Mason)
 * Find in project plugin (uses grep and ack) (Kieran Pilkington and Krzysztof Jablonski)
 * Runnables re-use an open tab. (Mat Schaffer)
 * Can pin your choice of bundles to the bundles menu (Delisa Mason)
 * Experimental git scm integration (Matthew Scharley)
 * PHP jump to declaration support (Daniel Cestari)
 * Outline view of document (jump to declaration in document) (Johannes Wollert)

Fixes:

 * Fix for opening files with regex characters in. (Tom Murray)

Version 0.3.9 (12 Aug 2010)
===========================

 * Clojure REPL (David Byrne)
 * Remote edit files (Felipe Coury & Dan Lucraft)
 * Remote directory view (Felipe Coury & Dan Lucraft)
 * Connection manager (Felipe Coury & Dan Lucraft)