@@ -2,27 +2,26 @@ module DocumentSearch
   class Search
     # An instance of a search type method: Regular expression
     def self.regex_search_method(line, query, replace)
-      new_line = line.sub(/#{query}/, replace)
-
-      if match = $~
-        startoff = match.pre_match.length
-        endoff   = (startoff + match[0].length) - 1
+      re = /#{query}/
+      if match_data = line.match(re)
+        new_text = match_data.to_s.sub(re, replace)
+        new_line = match_data.pre_match + new_text + match_data.post_match
         
-        return new_line, startoff, startoff + match[0].length
+        startoff = match_data.pre_match.length
+        endoff   = startoff + new_text.length
+          
+        return new_line, startoff, endoff
       end
-      return nil
     end
 
     # An instance of a search type method: Plain text search
     def self.plain_search_method(line, query, replace)
-      i = line.index(query)
-      if i
+      if i = line.index(query)
         startoff = i
         endoff   = i + query.length - 1
         line[startoff..endoff] = replace
         return line, startoff, startoff + replace.length
       end
-      return nil
     end
     
     # An instance of a search type method: Glob text search
